[gd_scene load_steps=19 format=3 uid="uid://4xkakbyp0xb2"]

[ext_resource type="Script" path="res://Enemies/enemy_1.gd" id="1_f2t8m"]
[ext_resource type="Texture2D" uid="uid://dp4ugq5vvxect" path="res://sprites/characters/slime.png" id="2_3uxpk"]
[ext_resource type="Texture2D" uid="uid://cvxw57qw8flmc" path="res://Shadows/SmallShadow.png" id="3_g3hy5"]
[ext_resource type="PackedScene" uid="uid://dsmi0cfnweujy" path="res://Enemies/PlayerDetectionZone.tscn" id="4_wupe1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3b7qa"]
atlas = ExtResource("2_3uxpk")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wl7eu"]
atlas = ExtResource("2_3uxpk")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gla0x"]
atlas = ExtResource("2_3uxpk")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fy3xk"]
atlas = ExtResource("2_3uxpk")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndjta"]
atlas = ExtResource("2_3uxpk")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_efp4f"]
atlas = ExtResource("2_3uxpk")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n35hd"]
atlas = ExtResource("2_3uxpk")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8o1u8"]
atlas = ExtResource("2_3uxpk")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aq08i"]
atlas = ExtResource("2_3uxpk")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8xbvy"]
atlas = ExtResource("2_3uxpk")
region = Rect2(160, 128, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_w8512"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3b7qa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wl7eu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gla0x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fy3xk")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndjta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efp4f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n35hd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8o1u8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aq08i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xbvy")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_mch73"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5udip"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4kkx0"]
radius = 103.044

[node name="Enemy_1" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 3
script = ExtResource("1_f2t8m")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -2)
sprite_frames = SubResource("SpriteFrames_w8512")
animation = &"Idle"
offset = Vector2(0, -6)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -1)
texture = ExtResource("3_g3hy5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_mch73")

[node name="HurtBox" type="Area2D" parent="."]
position = Vector2(0, 9)
disable_mode = 2
collision_layer = 8
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -17)
shape = SubResource("CircleShape2D_5udip")

[node name="PlayerDetectionZone" parent="." instance=ExtResource("4_wupe1")]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color(1, 1, 1, 0.54902)
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_4kkx0")
debug_color = Color(0, 0.6, 0.701961, 0.0745098)

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="body_entered" from="PlayerDetectionZone" to="." method="_on_player_detection_zone_body_entered"]
[connection signal="body_exited" from="PlayerDetectionZone" to="." method="_on_player_detection_zone_body_exited"]

[editable path="PlayerDetectionZone"]
